--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Snake</title>
 </head>
-<body>
+<body ontouchstart="showCoordinates(event)" ontouchmove="showCoordinates(event)">
 
     <header class="header">
         <div>
@@ -15,7 +15,7 @@
     </header>
 
     <div id="game-board"></div>
-    
+
     <script src="script.js"></script>
 </body>
 </html>
