--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/b5e33f91a7.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
     <title>Snake</title>
 </head>
@@ -15,6 +16,27 @@
     </header>
 
     <div id="game-board"></div>
+
+    <div class="responsive-button">
+        <div class="up">
+            <button id="ArrowUp">
+                <i class="fas fa-angle-double-up fa-3x"></i>
+            </button>
+        </div>
+        <div class="left-right">
+            <button id="ArrowLeft">
+                <i class="fas fa-angle-double-left fa-3x"></i>
+            </button>
+            <button id="ArrowRight">
+                <i class="fas fa-angle-double-right fa-3x"></i>
+            </button>
+        </div>
+        <div class="down">
+            <button id="ArrowDown">
+                <i class="fas fa-angle-double-down fa-3x"></i>
+            </button>
+        </div>
+    </div>
 
     <script src="script.js"></script>
 </body>
